--- a/awere/css/jquery.formstyler.theme.css
+++ b/awere/css/jquery.formstyler.theme.css
@@ -190,11 +190,12 @@
 	cursor: pointer;
 }
 .jq-selectbox__select {
-	height: 32px;
+	width: 80px;
+	height: 30px;
 	padding: 0 45px 0 10px;
 	border: 1px solid #CCC;
 	border-bottom-color: #B3B3B3;
-	border-radius: 4px;
+	border-radius: 20px;
 	background: linear-gradient(#FFF, #E6E6E6);
 	box-shadow: inset 1px -1px #F1F1F1, inset -1px 0 #F1F1F1, 0 1px 2px rgba(0,0,0,.1);
 	font: 14px/32px Arial, sans-serif;
