--- a/awere/css/style.css
+++ b/awere/css/style.css
@@ -61,6 +61,10 @@ span { display: inline-block; }
 /* Button ====================== */
 .btn { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; color: #fff; background-color: #1f4ba5; height: 30px; padding: 0 25px; border-radius: 25px; font-family: Arial, Arial, sans-serif; font-size: 12px; font-weight: 400; }
 
+.favorite { color: #b8b8b8; font-family: "PT Serif", sans-serif; font-size: 12px; font-style: italic; line-height: 18px; }
+.favorite .icon { font-size: 14px; }
+.favorite:hover { color: #fff; }
+
 /* Header ====================== */
 .header { height: 80px; background-color: #fff; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; padding: 0 30px; border-bottom: 1px solid #ececec; }
 
@@ -140,10 +144,32 @@ span { display: inline-block; }
 
 .total { color: #b8b8b8; font-family: "PT Serif", sans-serif; font-size: 12px; font-style: italic; line-height: 18px; }
 
-.product__title { color: #222; font-size: 12px; font-weight: 400; line-height: 16px; }
+.box-product { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin-right: -1px; }
+.box-product .product__title { height: 30px; overflow: hidden; }
+
+.product { position: relative; border-right: 1px solid #ececec; border-bottom: 1px solid #ececec; width: 14.285%; padding: 26px 10px; text-align: center; }
+.product:hover .product__title, .product:hover .price { color: #fff; }
+.product:hover .product__footer { position: relative; z-index: 2; }
+.product:hover .product__card { z-index: 2; opacity: 1; visibility: visible; }
+.product:hover:before { height: 100%; width: 100%; left: 0; top: 0; -webkit-transition: all 0.4s; transition: all 0.4s; }
+.product:before { content: ""; display: block; z-index: 1; position: absolute; top: 50%; left: 50%; height: 0; width: 0; background: #222; opacity: 0.95; -webkit-transition: all 0.4s; transition: all 0.4s; }
+.product__title { position: relative; z-index: 2; color: #222; font-size: 12px; font-weight: 400; line-height: 16px; }
 .product__title a { color: inherit; }
 .product__title a:hover { text-decoration: underline; }
+.product__img { position: relative; margin: 45px 0 60px 0; }
+.product__img img { margin: 0 auto; }
+.product__card { opacity: 0; visibility: hidden; position: absolute; left: -30px; right: -30px; padding: 0 10px; text-align: center; top: 50%; -webkit-transform: translate(0, -50%); transform: translate(0, -50%); -webkit-transition: all 0.4s; transition: all 0.4s; }
+.product__card .btn { margin-left: 10px; }
+.product__card .favorite { display: inline-block; margin-top: 15px; }
 .product__details { color: #b8b8b8; font-family: "PT Serif", sans-serif; font-size: 12px; font-style: italic; }
+.product__footer { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
+.product__footer .price, .product__footer .discount, .product__footer .pbadge { width: 33.33%; }
+.product__footer .discount { text-align: right; }
+.product__footer.sale .price { color: #ff3f2b; }
+.product__footer.hit, .product__footer.new { -webkit-box-pack: start; -ms-flex-pack: start; justify-content: flex-start; }
+.product .price { -webkit-transition: all 0.4s; transition: all 0.4s; }
+
+.discount { color: #a1a1a1; font-family: Oswald; font-size: 8px; font-weight: 700; text-decoration: line-through; letter-spacing: 0.8px; }
 
 /* header-inner ====================== */
 .header-inner { position: relative; background-position: center right; background-size: cover; background-repeat: no-repeat; padding: 20px 30px; height: 180px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
@@ -155,6 +181,8 @@ span { display: inline-block; }
 .bread-crumbs__item { margin-right: 4px; }
 .bread-crumbs__link { color: #868686; font-size: 12px; font-weight: 400; }
 .bread-crumbs__link:hover { color: #222; }
+
+.sidebar { -webkit-transition: margin-left 0.4s; transition: margin-left 0.4s; }
 
 .category { color: #1f4ba5; font-family: "Oswald"; font-size: 12px; font-weight: 700; text-transform: uppercase; letter-spacing: 1.2px; margin-bottom: 9px; }
 
@@ -203,5 +231,10 @@ span { display: inline-block; }
 .check-list__item:last-child { margin-bottom: 0; }
 .check-list__text { color: #222; font-size: 12px; font-weight: 400; line-height: 18px; cursor: pointer; }
 .check-list--column .check-list__item { display: inline-block; vertical-align: top; margin-right: -4px; width: 50%; padding-right: 10px; }
+
+.paginator { height: 60px; padding: 0 30px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.paginator__item { color: #979797; font-size: 12px; font-weight: 400; line-height: 18px; }
+.paginator .load { color: #222; }
+.paginator .load .icon { margin-right: 15px; }
 
 /*# sourceMappingURL=style.css.map */
